# llm-context-fmt

./: LICENSE  README.md  SPEC.md  pyproject.toml
llm_context_fmt/: __init__.py  __main__.py  analyzer.py  cli.py  formats.py  presets.py  runner.py
llm_context_fmt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
