[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-context-fmt"
version = "0.1.0"
description = "Compare how output format constraints shift LLM responses."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "rich>=13.7.1",
  "httpx>=0.27.0",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
llm-context-fmt = "llm_context_fmt.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_context_fmt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
